--- a/MVCLesson2/MVCLesson2.csproj
+++ b/MVCLesson2/MVCLesson2.csproj
@@ -171,14 +171,18 @@
     <Compile Include="Controllers\BookController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Filters\ExceptionLoggerAttribute.cs" />
     <Compile Include="Filters\MyAuthAttribute.cs" />
+    <Compile Include="Filters\OverrideFilterAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Book.cs" />
     <Compile Include="Models\BookContext.cs" />
+    <Compile Include="Models\ExceptionDetail.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\LoggerContext.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Filters\MyAuthorsAttribute.cs" />
     <Compile Include="Filters\NotAllowedAttribute.cs" />
@@ -186,6 +190,14 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\aspnet-MVCLesson2-20161021022515.mdf" />
+    <Content Include="App_Data\aspnet-MVCLesson2-20161021022515_log.ldf">
+      <DependentUpon>aspnet-MVCLesson2-20161021022515.mdf</DependentUpon>
+    </Content>
+    <Content Include="App_Data\BookContext.mdf" />
+    <Content Include="App_Data\BookContext_log.ldf">
+      <DependentUpon>BookContext.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
@@ -246,9 +258,7 @@
     <Content Include="Views\Book\Edit.cshtml" />
     <Content Include="Views\Book\Index.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
